i965/fs: In the pre-regalloc schedule, try harder at reducing reg pressure.

Previously, the best thing we had was to schedule the things unblocked by
the current instruction, on the hope that it would be consuming two values
at the end of their live intervals while only producing one new value.
Sometimes that wasn't the case.

Now, when an instruction is the first user of a GRF we schedule (i.e. it
will probably be the virtual_grf_def[] instruction after computing live
intervals again), penalize it by how many regs it would take up.  When an
instruction is the last user of a GRF we have to schedule (when it will
probably be the virtual_grf_end[] instruction), give it a boost by how
many regs it would free.

The new functions are made virtual (only 1 of 2 really needs to be
virtual) because I expect we'll soon lift the pre-regalloc scheduling
heuristic over to the vec4 backend.

shader-db:
total instructions in shared programs: 1512756 -> 1511604 (-0.08%)
instructions in affected programs:     10292 -> 9140 (-11.19%)
GAINED:                                121
LOST:                                  38

Improves tropics performance at my current settings by 4.50602% +/-
2.60694% (n=5).  No difference on Lightsmark (n=5).  No difference on
GLB2.7 (n=11).

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=70445